# qtmandelbrot

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.example.json  LICENSE  Main.qml  backend.cpp  backend.h  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrotrenderer.cpp  mandelbrotrenderer.h  renderer.cpp  renderer.h
src/: CMakeLists.txt  Main.qml  mandelbrot.cpp  mandelbrot.h
src/core/: CMakeLists.txt  algorithms.cpp  algorithms.h  types.h
